# IronNet

./: .gitignore  README.md
DotNetAnywhere/: CLIFile.c  CMakeLists.txt  Endian.h  InternalCall.c  JIT.c  MetaData.c  PInvoke.c  PInvoke.h  RVA.c  System.Diagnostics.Debugger.c  dna.c
source/: CMakeLists.txt  cliFile.c  cliFile.h  endian.h  ilOpcode.h  irStructures.h  main.c  metadataStructures.c  stringHelper.h
source/vs/: IronNet.sln  IronNet.vcxproj  IronNet.vcxproj.filters
source_old/: CMakeLists.txt  appDomain.h  cliFile.h  endian.h  irOpcode.h  irStructures.h  main.c  metadataStructures.c  metadataStructures.h  stringHelper.c  uthash.h
source_old/vs/: IronNet.sln  IronNet.vcxproj  IronNet.vcxproj.filters
test_tools/dotNetDecompiler/: DotNet.sln
test_tools/dotNetDecompiler/DotNet/: AssemblyOSTable.cpp  AssemblyOSTable.h  AssemblyProcessorTable.cpp  AssemblyProcessorTable.h  AssemblyRefOSTable.cpp  AssemblyRefOSTable.h  AssemblyRefProcessorTable.cpp  AssemblyRefProcessorTable.h  AssemblyRefTable.cpp  AssemblyRefTable.h  AssemblyTable.cpp  AssemblyTable.h  ClassLayoutTable.cpp  ClassLayoutTable.h  CodedIndex.cpp  CodedIndex.h  CodedIndices.h  ConstantTable.cpp  ConstantTable.h  CppUtil.h  CustomAttributeTable.cpp  CustomAttributeTable.h  DeclSecurityTable.cpp  DeclSecurityTable.h  DotNet.vcxproj  DotNet.vcxproj.filters  ElementType.h  EventMapTable.cpp  EventMapTable.h  EventTable.cpp  EventTable.h  ExportedTypeTable.cpp  ExportedTypeTable.h  FieldLayoutTable.cpp  FieldLayoutTable.h  FieldMarshalTable.cpp  FieldMarshalTable.h  FieldRVATable.cpp  FieldTable.cpp  (+69 more)
